--- a/src/components/About/index.css
+++ b/src/components/About/index.css
@@ -12,7 +12,7 @@ body{
     height: 100vh;
 }
 .about-left{
-    background: aqua;
+    background: #1562EA;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -20,7 +20,7 @@ body{
     height: 100vh;
 }
 .about-left-content > div{
-    background: lightblue;
+    background: #15CDEA;
     padding: 4rem 4rem 2.5rem 5rem;
     text-align: center;
 }
@@ -88,9 +88,13 @@ body{
     justify-content: center;
     padding: 0.8rem 0;
 }
+.icons a { 
+    color: inherit; 
+}
+ 
 .icons li{
     list-style-type: none;
-    background: lightblue;
+    background: #15CDEA;
     color: #fff;
     width: 40px;
     height: 40px;
@@ -122,7 +126,7 @@ body{
     text-transform: uppercase;
 }
 .about-right h1 span{
-    color: #dd2d4a;
+    color: #3215EA;
 }
 .about-right h2{
     font-weight: 600;
@@ -145,22 +149,22 @@ body{
     cursor: pointer;
 }
 .btn.btn-pink{
-    background: #dd2d4a;
+    background: #3215EA;
     color: #fff;
-    border-color: #dd2d4a;
+    border-color: #3215EA;
     transition: all 0.5s ease-in-out;
 }
 .btn.btn-pink:hover{
     background: transparent;
-    border-color: #dd2d4a;
+    border-color: #3215EA;
     color: #000;
 }
 .btn.btn-white{
     transition: all 0.5s ease-in-out;
 }
 .btn.btn-white:hover{
-    background: #dd2d4a;
-    border-color: #dd2d4a;
+    background: #3215EA;
+    border-color: #3215EA;
     color: #fff;
 }
 .about-para p{
