--- a/frontend/src/components/Box/index.css
+++ b/frontend/src/components/Box/index.css
@@ -1,3 +1,14 @@
+.box-container {
+	width: 50%;
+    margin: 20px auto;
+	
+	display: grid;
+	grid-template-rows: 150px 150px;
+	grid-template-columns: 150px 150px 150px;
+	
+	row-gap: 20px;
+	column-gap: 250px;
+}
 .box {
     position: relative;
     width: 300px;
