--- a/frontend/src/components/Box/index.css
+++ b/frontend/src/components/Box/index.css
@@ -1,11 +1,9 @@
 .box-container {
 	width: 50%;
-    margin: 20px auto;
-	
+  margin: 20px auto;
 	display: grid;
 	grid-template-rows: 150px 150px;
 	grid-template-columns: 150px 150px 150px;
-	
 	row-gap: 20px;
 	column-gap: 250px;
 }
@@ -54,13 +52,17 @@
     padding: 20px;
     height: 150px;
     width: 400px;
+    border-radius: 25px;
     background-color: #f2f2f2;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+    transition: all 0.2s ease-in-out;  
   }
   
   .github-pinned-repo-left {
     width: 50px;
     height: 50px;
     margin-right: 20px;
+ 
   }
   
   .github-pinned-repo-left img {
@@ -98,3 +100,7 @@
     font-size: 14px;
     color: #555;
   }
+
+.github-pinned-repo:hover {
+    background-color: rgba(23, 255, 255, 0.8);
+}
