--- a/frontend/src/components/About/index.css
+++ b/frontend/src/components/About/index.css
@@ -12,7 +12,11 @@ body{
     height: 100vh;
 }
 .about-left{
-    background: #1562EA;
+    background: linear-gradient(to right, 
+    rgba(96,239,255,0.8),
+    rgba(0,97,255,0.8), 
+    rgba(50,21,234,0.8)
+  );
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -20,7 +24,10 @@ body{
     height: 100vh;
 }
 .about-left-content > div{
-    background: #15CDEA;
+    background: linear-gradient(to bottom, 
+    rgba(0,97,255), 
+    rgba(96,239,255)
+  );
     padding: 4rem 4rem 2.5rem 5rem;
     text-align: center;
 }
