--- a/src/components/Layout/index.css
+++ b/src/components/Layout/index.css
@@ -1,3 +1,3 @@
 .main {
-    background-image: url(/images/background.jpg);
+    background-image: url("https://bs-uploads.toptal.io/blackfish-uploads/components/seo/content/og_image_file/og_image/1114165/ux-designer-portfolios-59442fc10a13700c71c7e7f0951416fe.png");
 }
